Mon Mar 31 17:41:11 1997  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_err.et, kadm_rpc.h, kadm_rpc_xdr.c: add support for
 	setkey_principal

Thu Jan 16 19:01:00 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (all-prerecurse): Update to use double-colon rules.

Wed Jan 15 20:43:01 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new libarary build procedure.

Mon Nov 11 17:01:40 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_rpc_xdr.c: fix memory leak handling key_data and tl_data

Wed Nov  6 10:20:36 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kadm_err.et: New error codes for KADM5_MISSING_CONF_PARAMS and 
		KADM5_BAD_SERVER_NAME.

Mon Nov  4 21:16:01 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* alt_prof.c (krb5_aprof_init): If the user specifies the config
		file using a configuration file, it must exist.
		Otherwise, krb5_aprof_init will return an error.
		(kadm5_get_config_params): If aprof_init returns an error,
		it should return an error as well.

Wed Nov  6 17:45:43 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_rpc_xdr.c (xdr_krb5_principal): handle a NULL principal
 	pointer (this can happen when get_principal is passed a mask
 	without KADM5_PRINCIPAL in it, and will cause a beta 7 kadmind to
 	coredump)

Fri Nov  1 13:16:16 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_err.et: update for new tl_data semantics [krb5-admin/140]

Fri Oct 25 23:47:26 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in, Makefile.in: Tweaks to prevent unecessary
	rebuilding.

Mon Oct 21 21:23:44 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Fixes for new directory recursion method; also
	fixes for inclusion sequencing.

Mon Oct 21 16:29:11 1996  Barry Jaspan  <bjaspan@mit.edu>

	* server_internal.h (ALL_PRINC_MASK): add KADM5_TL_DATA and
 	KADM5_KEY_DATA to ALL_PRINC_MASK [krb5-admin/20]

Fri Oct 18 15:44:14 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_rpc_xdr.c, misc_free.c, server_internal.h: include stdlib.h
 	instead of malloc.h [krb5-admin/35]
