@@ -331,6 +331,11 @@ kadm5_ret_t    kadm5_randkey_principal(void *server_handle,
 				       krb5_keyblock **keyblocks,
 				       int *n_keys);
 #endif
+kadm5_ret_t    kadm5_setkey_principal(void *server_handle,
+				      krb5_principal principal,
+				      krb5_keyblock *keyblocks,
+				      int n_keys);
+
 kadm5_ret_t    kadm5_create_policy(void *server_handle,
 				   kadm5_policy_ent_t ent,
 				   long mask);
