@@ -1,3 +1,9 @@
+Wed May 28 13:34:17 1997  Barry Jaspan  <bjaspan@mit.edu>
+
+	* admin.h: add prototype for kadm5_setkey_principal
+
+	* misc_free.c (kadm5_free_key_data): add kadm5_free_data
+	
 Mon Mar 31 17:41:11 1997  Barry Jaspan  <bjaspan@mit.edu>
 
 	* kadm_err.et, kadm_rpc.h, kadm_rpc_xdr.c: add support for
